--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "expo": "^35.0.0",
     "native-base": "^2.13.8",
     "react": "16.8.3",
