--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-native-appearance": "^0.3.2",
         "react-native-calendars": "^1.259.0",
         "react-native-dotenv": "^0.2.0",
+        "react-native-fbsdk": "^1.1.2",
         "react-native-gesture-handler": "^1.5.3",
         "react-native-masked-text": "^1.13.0",
         "react-native-modal": "^11.5.3",
