--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "dependencies": {
         "@react-native-community/async-storage": "^1.7.1",
-        "@react-native-community/datetimepicker": "^2.2.1",
+        "@react-native-community/datetimepicker": "^2.2.3",
         "@react-native-community/masked-view": "^0.1.6",
         "expo": "^36.0.2",
         "expo-asset": "^8.0.0",
@@ -22,10 +22,10 @@
         "react-native-appearance": "^0.3.2",
         "react-native-calendars": "^1.259.0",
         "react-native-dotenv": "^0.2.0",
-        "react-native-fbsdk": "^1.1.2",
         "react-native-gesture-handler": "^1.5.3",
         "react-native-masked-text": "^1.13.0",
         "react-native-modal": "^11.5.3",
+        "react-native-modal-datetime-picker": "^8.5.1",
         "react-native-modal-dropdown": "^0.7.0",
         "react-native-picker-select": "^6.4.0",
         "react-native-progress-steps": "^1.2.8",
