--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "android": "react-native run-android",
-        "ios": "react-native run-ios",
+        "ios": "react-native run-ios --simulator=\"iPhone 11 Pro\"",
         "start": "react-native start",
         "test": "jest",
         "lint": "eslint ."
@@ -12,27 +12,40 @@
     "dependencies": {
         "@react-native-community/async-storage": "^1.7.1",
         "@react-native-community/datetimepicker": "^2.2.3",
-        "@react-native-community/masked-view": "^0.1.6",
+        "@react-native-community/masked-view": "^0.1.10",
+        "@react-native-community/push-notification-ios": "^1.2.0",
+        "@react-native-firebase/app": "^7.1.0",
+        "@react-native-firebase/auth": "^7.1.0",
+        "@react-native-firebase/database": "^7.1.0",
+        "@react-native-firebase/firestore": "^7.1.0",
+        "@react-native-firebase/messaging": "^7.1.0",
+        "@react-navigation/drawer": "^5.7.5",
+        "@react-navigation/native": "^5.4.0",
+        "@react-navigation/stack": "^5.3.7",
         "expo": "^36.0.2",
         "expo-asset": "^8.0.0",
         "expo-linear-gradient": "^8.0.0",
+        "firebase": "7.9.0",
         "galio-framework": "^0.6.3",
         "react": "16.9.0",
         "react-native": "0.61.5",
         "react-native-appearance": "^0.3.2",
         "react-native-calendars": "^1.259.0",
         "react-native-dotenv": "^0.2.0",
-        "react-native-gesture-handler": "^1.5.3",
+        "react-native-gesture-handler": "^1.6.1",
+        "react-native-image-crop-picker": "^0.31.1",
         "react-native-masked-text": "^1.13.0",
         "react-native-modal": "^11.5.3",
         "react-native-modal-datetime-picker": "^8.5.1",
         "react-native-modal-dropdown": "^0.7.0",
+        "react-native-permissions": "^2.1.5",
         "react-native-picker-select": "^6.4.0",
         "react-native-progress-steps": "^1.2.8",
+        "react-native-push-notification": "^3.4.0",
         "react-native-ratings": "^6.5.0",
-        "react-native-reanimated": "^1.7.0",
-        "react-native-safe-area-context": "^0.6.2",
-        "react-native-screens": "^2.0.0-alpha.29",
+        "react-native-reanimated": "^1.8.0",
+        "react-native-safe-area-context": "^1.0.0",
+        "react-native-screens": "^2.7.0",
         "react-native-table-component": "^1.2.1",
         "react-native-unimodules": "^0.7.0",
         "react-native-vector-icons": "^6.6.0",
@@ -48,7 +61,7 @@
         "@babel/runtime": "^7.6.2",
         "@react-native-community/eslint-config": "^0.0.5",
         "babel-jest": "^24.9.0",
-        "eslint": "^6.5.1",
+        "eslint": "^7.0.0",
         "jest": "^24.9.0",
         "metro-react-native-babel-preset": "^0.56.0",
         "react-test-renderer": "16.9.0"
