--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
         "@react-native-community/datetimepicker": "^2.2.3",
         "@react-native-community/masked-view": "^0.1.10",
         "@react-native-community/push-notification-ios": "^1.2.0",
-        "@react-native-firebase/app": "^7.1.0",
-        "@react-native-firebase/auth": "^7.1.0",
-        "@react-native-firebase/database": "^7.1.0",
-        "@react-native-firebase/firestore": "^7.1.0",
-        "@react-native-firebase/messaging": "^7.1.0",
-        "@react-navigation/drawer": "^5.7.5",
-        "@react-navigation/native": "^5.4.0",
-        "@react-navigation/stack": "^5.3.7",
+        "@react-native-firebase/app": "7.1.0",
+        "@react-native-firebase/auth": "7.1.0",
+        "@react-native-firebase/database": "7.1.0",
+        "@react-native-firebase/firestore": "7.1.0",
+        "@react-native-firebase/messaging": "7.1.0",
+        "@react-navigation/drawer": "5.6.3",
+        "@react-navigation/native": "5.2.3",
+        "@react-navigation/stack": "5.2.18",
         "expo": "^36.0.2",
         "expo-asset": "^8.0.0",
         "expo-linear-gradient": "^8.0.0",
