--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "react": "16.9.0",
         "react-native": "0.61.5",
         "react-native-appearance": "^0.3.2",
-        "react-native-calendars": "^1.259.0",
+        "react-native-calendars": "1.259.0",
         "react-native-dotenv": "^0.2.0",
         "react-native-gesture-handler": "^1.6.1",
         "react-native-image-crop-picker": "^0.31.1",
