--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "react-native-reanimated": "^1.8.0",
         "react-native-safe-area-context": "^1.0.0",
         "react-native-screens": "^2.7.0",
+        "react-native-swipe-list-view": "^3.1.2",
         "react-native-table-component": "^1.2.1",
         "react-native-unimodules": "^0.7.0",
         "react-native-vector-icons": "^6.6.0",
