--- a/ios/ironbuffet/Info.plist
+++ b/ios/ironbuffet/Info.plist
@@ -34,6 +34,16 @@
 				<string>mynutritionapp</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>itms-apps</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>itms-apps</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
