--- a/ios/ironbuffet/Info.plist
+++ b/ios/ironbuffet/Info.plist
@@ -28,10 +28,10 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>mynutritionapp</string>
+			<string>ironbuffetapp</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>mynutritionapp</string>
+				<string>ironbuffetapp</string>
 			</array>
 		</dict>
 	</array>
