--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@react-navigation/drawer": "5.6.3",
         "@react-navigation/native": "5.2.3",
         "@react-navigation/stack": "5.2.18",
+        "@react-native-community/toolbar-android": "^0.1.0-rc.2",
         "firebase": "7.9.0",
         "galio-framework": "^0.6.3",
         "react": "16.9.0",
