--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@react-native-community/datetimepicker": "^2.2.3",
         "@react-native-community/masked-view": "^0.1.10",
         "@react-native-community/push-notification-ios": "^1.2.0",
+        "@react-native-community/toolbar-android": "^0.1.0-rc.2",
         "@react-native-firebase/app": "7.1.0",
         "@react-native-firebase/auth": "7.1.0",
         "@react-native-firebase/database": "7.1.0",
@@ -22,7 +23,6 @@
         "@react-navigation/drawer": "5.6.3",
         "@react-navigation/native": "5.2.3",
         "@react-navigation/stack": "5.2.18",
-        "@react-native-community/toolbar-android": "^0.1.0-rc.2",
         "firebase": "7.9.0",
         "galio-framework": "^0.6.3",
         "react": "16.9.0",
@@ -47,7 +47,7 @@
         "react-native-swipe-list-view": "^3.1.2",
         "react-native-table-component": "^1.2.1",
         "react-native-unimodules": "^0.7.0",
-        "react-native-vector-icons": "^7.1.0",
+        "react-native-vector-icons": "6.7.0",
         "react-navigation": "^4.0.10",
         "react-navigation-drawer": "^2.3.3",
         "react-navigation-stack": "^2.0.16",
